# ia-src

./: .gitignore  README.md  pyproject.toml
config/: settings.py
docs/: Artigo_IA_Segura_Confiavel_Responsavel.docx  Artigo_IA_Segura_Confiavel_Responsavel.md  Artigo_IA_Segura_Confiavel_Responsavel_v2.md
examples/: credit_scoring_profile.json
src/ia_src/: __init__.py
src/ia_src/core/: base_agent.py  context.py  message.py
src/ia_src/llm/: base_provider.py
src/ia_src/memory/: base_memory.py
src/ia_src/orchestration/: runner.py
src/ia_src/rai/: __init__.py
src/ia_src/rai/agents/: __init__.py  accountability_agent.py  aia_agent.py  alignment_agent.py  base_rai_agent.py  fairness_agent.py  lifecycle_agent.py  orchestrator_agent.py  robustness_agent.py  security_agent.py  transparency_agent.py
src/ia_src/rai/cli/: __init__.py  main.py  mock_provider.py
src/ia_src/rai/models/: __init__.py  aia_report.py  lifecycle_checkpoint.py  principle_evaluation.py  risk_assessment.py  system_profile.py
src/ia_src/rai/orchestration/: __init__.py  rai_runner.py
src/ia_src/rai/tools/: __init__.py  bias_detection_tool.py  compliance_tool.py  data_profiler_tool.py  explainability_tool.py  report_generator_tool.py
src/ia_src/tools/: base_tool.py
tests/unit/rai/: test_rai_system.py
